# aos-kernel

./: .gitignore  COMMERCIAL_BOUNDARY.md  CONTRIBUTING.md  EVIDENCE.md  INTEGRATION.md  NOTICE  README.md  SCOPE_OF_PROOF.md  SECURITY.md  docs.json  lake-manifest.json  lakefile.lean  pyproject.toml
.github/: dependabot.yml
.github/workflows/: aos-kernel-ci.yml  aos-kernel-codeql.yml  aos-kernel-supply-chain.yml
adapters/: __init__.py  strict_json.py
aos_cli/: __init__.py  __main__.py  cli.py  trusted_output.py
core/: aos_public_core.py
docs/: AUDIT_PRECHECK.md  FORMAL_CLAIMS_BOUNDARY.md  MAINTENANCE_POLICY.md  PROOF_OF_VALUE.md  PUBLIC_BOUNDARY.md  RELEASE_GOVERNANCE.md  TRUSTED_AOS_OUTPUT.md  VALIDATION_GATES.md
docs/case-studies/: public-repo-replay.md
docs/releases/: v0.1.0.md  v0.1.1.md
evidence/: integrity_manifest.json
examples/reports/: public-replay-record.jsonl  public-replay-summary.md  public-replay-trusted-output.json
lean/: AOSAxiomAudit.lean  AOSEnvironmentModel.lean  AOSPublicCore.lean
tests/: test_aos_public_core.py  test_audit_precheck.py  test_cli_demo.py  test_trusted_output.py  test_verdict_paths_agree.py
tools/: audit_precheck.py  run_validation_gate.py  verify_public_integrity.py
